--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typewriter-effect": "^2.18.0",
