--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
+    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tsparticles": "^1.33.3",
     "typewriter-effect": "^2.18.0",
     "web-vitals": "^1.1.2"
   },
